[FEAT]: test API 구현
1. test domain 구현
2. 무작위 카테고리 문제 출제 mvc 구현
3. 테스트 문제 저장 mvc 구현
4. 테스트 문제풀이 기록 조회 mvc 구현
 4-1. 테스트 문제풀이 기록 조회 과정중 UserSolvedProblemResultResponse 재사용하는 로직 구현
5. 다음 문제번호 찾는 로직 DB 최적화 : UserSolvedProblemRepository